アクセス情報とRSVPフォームの更新：シャトルバス所要時間修正、バス停情報削除、駐車場台数修正

--- a/index.html
+++ b/index.html
@@ -445,16 +445,15 @@
 
     <h3>シャトルバス（姪浜駅 ⇆ 会場）</h3>
     <p>姪浜駅北口ロッテリア前より <strong>10:00 〜 挙式開始まで</strong>、20分おきに無料シャトルバスを運行いたします。<br>
-       所要時間は約15分です。</p>
+       所要時間は約10分です。</p>
 
     <h3>公共交通機関</h3>
     <ul>
       <li>地下鉄空港線「姪浜駅」よりタクシー約10分</li>
-      <li>西鉄バス「マリノアシティ前」バス停下車すぐ</li>
     </ul>
 
     <h3>お車でお越しの方</h3>
-    <p>会場併設の <strong>無料駐車場（300台）</strong> をご利用いただけます。</p>
+    <p>会場併設の <strong>無料駐車場（約100台）</strong> をご利用いただけます。</p>
   </section>
 
   <section id="rsvp">
@@ -512,20 +511,6 @@
       <div class="form-group guest-name-group" style="display: none;">
         <label for="guest_name">同伴者名 <span class="required">*</span></label>
         <input type="text" id="guest_name" name="guest_name">
-      </div>
-
-      <div class="form-group">
-        <label>シャトルバス利用 <span class="required">*</span></label>
-        <div class="radio-group">
-          <label>
-            <input type="radio" name="shuttle" value="利用する" required>
-            利用する
-          </label>
-          <label>
-            <input type="radio" name="shuttle" value="利用しない" required>
-            利用しない
-          </label>
-        </div>
       </div>
 
       <div class="form-group">
@@ -660,7 +645,6 @@
         attendance: document.querySelector('input[name="attendance"]:checked').value,
         has_guest: document.querySelector('input[name="has_guest"]:checked').value,
         guest_name: document.getElementById('guest_name').value,
-        shuttle: document.querySelector('input[name="shuttle"]:checked').value,
         after_party: document.querySelector('input[name="after_party"]:checked').value,
         has_children: document.querySelector('input[name="has_children"]:checked')?.value || 'なし',
         children_details: document.getElementById('children_details').value,
